# telegram-download-chat

./: .gitignore  README.md  config.example.yml
docs/: rust-gui-implementation-plan.md
docs/plans/: ui-design-brief.md  youtube-downloader-implementation.md
native/tdc-app/: Cargo.toml
native/tdc-app/src/: config.rs  downloader.rs  export.rs  main.rs  telegram.rs
native/tdc-downloader/: Cargo.toml
native/tdc-downloader/src/: main.rs  protocol.rs  runner.rs  state.rs
src/telegram_download_chat/cli/: __init__.py  arguments.py  commands.py
src/telegram_download_chat/core/: auth_utils.py  download.py  downloader.py  media.py  messages.py  native_media.py  render.py
src/telegram_download_chat/gui/: worker.py
src/telegram_download_chat/gui/tabs/: download_tab.py
src/telegram_download_chat/gui/windows/: main_window.py
tests/: test_media_downloads.py
