[package]
name = "tdc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
dirs = "6.0"
grammers-client = "0.9.0"
grammers-mtsender = "0.9.0"
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
iced = { version = "0.12", features = ["tokio"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["fs", "process", "rt", "sync", "time"] }
