[package]
name = "tdc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "std"] }
dirs = "6.0"
grammers-client = "0.9.0"
grammers-mtsender = "0.9.0"
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
html-escape = "0.2"
iced = { version = "0.12", features = ["tokio"] }
minijinja = "2.12"
printpdf = "0.7"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["fs", "process", "rt", "sync", "time"] }
urlencoding = "2.1"
