[package]
name = "tdc-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
grammers-client = "0.9.0"
grammers-mtsender = "0.9.0"
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "rt", "sync", "time"] }
